--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,8 @@ init:
 #---------------------------------#
 before_build:
 
-- cmd: docker-switch-linux
+- ps: Write-host "`nSwitch to linux engine"  -foregroundcolor green
+- ps: Switch-DockerLinux
 - docker version && docker-compose version
 - cmd: run-docker.cmd
 
