--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,12 +35,7 @@ init:
 #---------------------------------#
 before_build:
 
-dockerpath: 
-- where docker
-
-- ps: |
-      Write-Host "Docker path: [$env:dockerpath]" -foregroundcolor "magenta"
-
+- cmd: where docker
 - ps: Write-host "`nSwitch to linux engine"  -foregroundcolor green
 - cmd: $env:dockerpath -SwitchLinuxEngine'
 - docker version && docker-compose version
