--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,8 +36,8 @@ init:
 before_build:
 
 - cmd: where docker
-- ps: Write-host "`nSwitch to linux engine"  -foregroundcolor green
-- ps: 'C:\Program Files\Docker\docker.exe -SwitchLinuxEngine'
+- cmd: set DOCKER_PATH="C:\Program Files\Docker\docker.exe"
+- cmd: $env:DOCKER_PATH -SwitchLinuxEngine'
 - docker version && docker-compose version
 - cmd: run-docker.cmd
 
