--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,7 +36,7 @@ init:
 before_build:
 
 - cmd: where docker
-- cmd: set DOCKER_PATH="C:\Program Files\Docker\docker.exe"
+- cmd: set DOCKER_PATH="C:\/Program /Files\Docker\docker.exe"
 - cmd: $env:DOCKER_PATH -SwitchLinuxEngine'
 - docker version && docker-compose version
 - cmd: run-docker.cmd
