--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,8 +36,7 @@ init:
 before_build:
 
 - cmd: where docker
-- cmd: set DOCKER_PATH="C:\/Program /Files\Docker\docker.exe"
-- cmd: $env:DOCKER_PATH -SwitchLinuxEngine
+- cmd: &'C:\Program Files\Docker\docker.exe -SwitchLinuxEngine'
 - docker version && docker-compose version
 - cmd: run-docker.cmd
 
