--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,7 +36,7 @@ init:
 before_build:
 
 - cmd: where docker
-- cmd: &'C:\Program Files\Docker\docker.exe -SwitchLinuxEngine'
+- cmd: . "C:\Program Files\Docker\docker.exe -SwitchLinuxEngine"
 - docker version && docker-compose version
 - cmd: run-docker.cmd
 
