--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,8 +35,10 @@ init:
 #---------------------------------#
 before_build:
 
+- cmd: echo %programfiles%
+- cmd: echo [$Env:ProgramFiles]
 - cmd: where docker
-- cmd: $Env:ProgramFiles\Docker\docker.exe -SwitchLinuxEngine
+- cmd: [$Env:ProgramFiles]\Docker\docker.exe -SwitchLinuxEngine
 - docker version && docker-compose version
 - cmd: run-docker.cmd
 
