--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,7 +38,8 @@ before_build:
 - cmd: where docker
 - ps: Write-host "`nSwitch to linux engine"  -foregroundcolor green
 # - cmd: C:\Program Files\Docker\docker.exe -SwitchLinuxEngine
-- ps: Invoke-Expression "& 'C:\Program Files\Docker\docker.exe -SwitchLinuxEngine'"
+# - ps: Invoke-Expression "& 'C:\Program Files\Docker\docker.exe -SwitchLinuxEngine'"
+- ps: &(C:\Program Files\Docker\docker.exe -SwitchLinuxEngine)
 - docker version && docker-compose version
 - cmd: run-docker.cmd
 
