--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,7 +36,7 @@ init:
 before_build:
 
 - cmd: where docker
-- cmd: C:\Progra~1\Docker\Docker\DockerCli.exe -SwitchLinuxEngine
+- cmd: C:\Progra~1\Docker\DockerCli.exe -SwitchLinuxEngine
 - docker version && docker-compose version
 - cmd: run-docker.cmd
 
