--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,8 +36,8 @@ init:
 before_build:
 
 - cmd: where docker
-- ps: Write-host "`nSwitch to linux engine"  -foregroundcolor green
-- ps: Switch-DockerLinux
+# - ps: Write-host "`nSwitch to linux engine"  -foregroundcolor green
+# - ps: Switch-DockerLinux
 - docker version && docker-compose version
 - cmd: run-docker.cmd
 
