--- a/Dockerfile.linuxamd64
+++ b/Dockerfile.linuxamd64
@@ -8,7 +8,7 @@ COPY . .
 RUN cd NBXplorer && \
     dotnet publish --output /app/ --configuration Release
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.0.0-buster-slim
+FROM mcr.microsoft.com/dotnet/core/sdk:3.0.100
 WORKDIR /app
 
 RUN mkdir /datadir
