--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,12 +35,12 @@ init:
 #---------------------------------#
 before_build:
 
-- cmd: where docker
-# - ps: Write-host "`nSwitch to linux engine"  -foregroundcolor green
-# - ps: Switch-DockerLinux
 
-- docker version && docker-compose version
-- cmd: run-docker.cmd
+- ps: |
+      Write-Host "[$env:configuration] STARTED RabbitMq" -foregroundcolor "magenta"
+      where docker
+      docker version && docker-compose version
+      docker-compose -f docker-compose.regtest.yml up rabbitmq
 
 - ps: |
       Write-Host "[$env:configuration] STARTED dotnet restore" -foregroundcolor "magenta"
