--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,11 +36,10 @@ init:
 before_build:
 
 
-- ps: |
-      Write-Host "[$env:configuration] STARTED RabbitMq" -foregroundcolor "magenta"
-      where docker
-      docker version && docker-compose version
-      docker-compose -f docker-compose.regtest.yml up rabbitmq
+- ps: Write-Host "[$env:configuration] STARTED RabbitMq" -foregroundcolor "magenta"
+- cmd: where docker
+- cmd: docker version && docker-compose version
+- cmd: docker-compose -f docker-compose.regtest.yml up rabbitmq
 
 - ps: |
       Write-Host "[$env:configuration] STARTED dotnet restore" -foregroundcolor "magenta"
