--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,7 +39,7 @@ before_build:
 - ps: Write-Host "[$env:configuration] STARTED RabbitMq" -foregroundcolor "magenta"
 - cmd: where docker
 - cmd: docker version && docker-compose version
-- cmd: docker-compose -f docker-compose.regtest.yml up rabbitmq
+- cmd: docker-compose -f docker-compose.regtest.yml up -d rabbitmq
 
 - ps: |
       Write-Host "[$env:configuration] STARTED dotnet restore" -foregroundcolor "magenta"
