--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,6 +33,13 @@ init:
 #---------------------------------#
 #       build configuration       #
 #---------------------------------#
+
+start_rabbit:
+- ps: Write-Host "[$env:configuration] STARTED RabbitMq" -foregroundcolor "magenta"
+- cmd: where docker
+- cmd: docker version && docker-compose version
+- cmd: docker-compose -f docker-compose.regtest.yml up -d rabbitmq
+
 before_build:
 - ps: |
       Write-Host "[$env:configuration] STARTED dotnet restore" -foregroundcolor "magenta"
